update - readme and env

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       property="og:title"
-      content="Ether Editor - Real-time Collaborative JavaScript Editor"
+      content="Ether Editor - Real-time Collaborative Editor"
     />
     <meta
       property="og:description"
@@ -32,7 +32,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:title"
-      content="Ether Editor - Real-time Collaborative JavaScript Editor"
+      content="Ether Editor - Real-time Collaborative Editor"
     />
     <meta
       property="twitter:description"
