update readme and hosting link

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,7 @@
     />
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://ether-editor-0e22562dd46d.herokuapp.com"
-    />
+    <meta property="og:url" content="https://ether-editor-q2mv.onrender.com/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="twitter:card" content="summary_large_image" />
