--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <title>Ether Editor | Collaborative Real-Time Editor</title>
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+      href="%PUBLIC_URL%/logo.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
